# Gisela

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
gisela/: CMakeLists.txt
gisela/cmake/: common.cmake  opencl.cmake
gisela/common/: CMakeLists.txt
gisela/common/util/: file_util copy.cc1  file_util.cc  file_util.h
gisela/src/: CMakeLists.txt  main.cpp  vadd.cl
gisela/src/kernel/cl/: convert_cl.py  hello.cl  vadd.cl
gisela/src/runtime/opencl/: opencl_allocator.h  opencl_runtime.h
